# simple_pyhton_project

./: .gitignore  README.md  mypy.ini  pyproject.toml
notebooks/: test.ipynb
src/: 4 paskaita 10-03.ipynb  ND 10-03.ipynb  ND 10-06.ipynb  Paskaita 10-06.ipynb  Paskaita 10-11.ipynb  U3.txt  UU2.txt  UU2_rez.txt  main.py  tesla_task.ipynb  uzdv1.ipynb
